kustomize/overlays/nerc-ocp-prod/base/ingresses/smartabyar-smartvillage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartabyar-smartvillage
  namespace: smart-village-faeeb6c
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
    acme.cert-manager.io/http01-ingress-class: openshift-default
spec:
  ingressClassName: openshift-default
  tls:
  - hosts:
    - www.smartabyarsmartvillage.org
    secretName: smartabyar-smartvillage-cert
  rules:
  - host: www.smartabyarsmartvillage.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartabyar-smartvillage-web
            port:
              number: 8080
